--- a/style/global.css
+++ b/style/global.css
@@ -72,6 +72,9 @@ body{
 #content>.viewport>div{
   padding: 2em 3em 0em;
 }
+#content>.viewport{
+  padding-bottom: 1em;
+}
 a>img{
   opacity: .8;
   transition: all 0.1s;
@@ -192,11 +195,11 @@ a>img:hover{ opacity: 1.0; }
 }
 
 #header{
-  background-color: #091132;
+  background-color: #0c0c0c;
   background-image: url(../img/header.jpg);
   box-shadow: 0px -10px 50px black inset;
   background-size: cover;
-  background-position: center 20%;
+  background-position: center 50%;
   text-align: center;
 }
 /*no bgsizecover*/
@@ -225,15 +228,18 @@ a>img:hover{ opacity: 1.0; }
 
 #footer{
   text-align: center;
-  margin: 6em 0em 6em;
-  padding-top: 2em;
-  border-top: 1px solid #ddd;
+  margin: 0;
+  margin-top: 7em;
+  padding: 3em 0 6em;
+  background-color: #0c0c0c;
+  color: #DDD;
+  border-top: 3px solid #333;
 }
 #footer a{
   color: #666;
   text-decoration: none;
 }
-#footer a:hover{ color: #333; }
+#footer a:hover{ color: #DDD; }
 
 @media screen and (max-width: 600px) {
   body{ font-size: 12px; }
@@ -249,7 +255,10 @@ a>img:hover{ opacity: 1.0; }
   .switch_button .switch-back, .switch_button .switch-object{ transition: none; }
   #header h1{ font-size: 1.5em; }
   #header>div{ padding: 2em .5em .5em; }
-  #footer{ margin: 4em 0; }
+  #footer{
+    margin-top: 4em;
+    padding-bottom: 4em;
+  }
 }
 @media screen and (max-width: 450px) {
   .card{ padding: 2em 1em; }
