--- a/style/global.css
+++ b/style/global.css
@@ -197,43 +197,69 @@ a>img:hover{ opacity: 1.0; }
 #header{
   background-color: #0c0c0c;
   background-image: url(../img/header.jpg);
-  box-shadow: 0px -10px 50px black inset;
+  box-shadow: 0px 0px 50px black inset;
   background-size: cover;
-  background-position: center 50%;
-  text-align: center;
+  background-position: center 60%;
+  overflow: hidden;
+  margin-bottom: 1.5em;
+  position: relative;
+  border-top: 3px solid #7563EA;
 }
 /*no bgsizecover*/
 .no-bgsizecover #header{ background-size: 100%; }
+#header:before{
+  content: '';
+  background: linear-gradient(to right, rgba(0,0,0,.7), rgba(0,0,0,0));
+  height: 100%;
+  width: 80%;
+  position: absolute;
+}
 #header>div{
   color: white;
   padding: 2em 1.5em 3em;
-  text-shadow: 0px 1px 10px black, 0px 0px 5px black;
+  text-shadow: 0px 0px 10px black;
+  min-height: 3.5em;
+  position: relative;
 }
 #header h1{
   font-weight: bold;
-  font-size: 2em;
+  font-size: 3.5em;
+  padding: 1em 0;
+  margin-top: -1.5em;
+  margin-bottom: -1em;
 }
-#header ul{ margin: 1em 0em 1.5em; }
+#header>div>p{
+  padding: 0 .3em;
+}
+#header nav{
+  box-shadow: 0px 0px 20px rgba(255,255,255,.3);
+  background-color: rgba(12,12,12,.9);
+  font-size: 1.1em;
+  border-top: 1px solid white;
+  position: relative;
+  padding: 0 2em;
+}
+#header ul{ margin: .5em 0; }
 #header ul li{ display: inline-block; }
 #header a{
   color: white;
   padding: 1em 1.2em 1em;
-  font-size: 0.9em;
 }
 #header a:hover{
-  background-color: rgba(0,0,0,0.3);
-  border-radius: 10px 10px 0 0;
-  border-bottom: 3px solid white;
+  background-color: rgba(255,255,255,0.9);
+  color: black;
 }
 
 #footer{
-  text-align: center;
   margin: 0;
   margin-top: 7em;
   padding: 3em 0 6em;
   background-color: #0c0c0c;
   color: #DDD;
   border-top: 3px solid #333;
+}
+#footer .copyright{
+  padding: 0 2em;
 }
 #footer a{
   color: #666;
@@ -253,12 +279,20 @@ a>img:hover{ opacity: 1.0; }
   .switch_button{ padding: 0 1.5em; }
   .switch_button .switch-back{ right: 1.5em;}
   .switch_button .switch-back, .switch_button .switch-object{ transition: none; }
-  #header h1{ font-size: 1.5em; }
-  #header>div{ padding: 2em .5em .5em; }
+  #header h1{
+    margin-top: -1em;
+    margin-bottom: -1em;
+    font-size: 2em;
+  }
+  #header nav{ padding: 0 .5em; }
+  #header{ margin-bottom: 0em; }
   #footer{
     margin-top: 4em;
     padding-bottom: 4em;
+    padding-left: 1em;
+    padding-right: 1em;
   }
+  #footer .copyright{ padding: 0 .5em; }
 }
 @media screen and (max-width: 450px) {
   .card{ padding: 2em 1em; }
